# eng-mgr-take-home-challenge

./: .gitignore  README.md  pyproject.toml
restapi/: admin.py  settings.py  urls.py  views.py
restapi/models/: users.py  worked_hours.py
restapi/serializers/: users.py  worked_hours.py
restapi/tests/: test_urls.py
restapi/views/: users_views.py  worked_hours_views.py
